syntax = "proto3";

package rating;

service RatingService {
    rpc RateMod(RateModRequest) returns (RateModResponse);
    rpc GetRates(GetRatesRequest) returns (GetRatesResponse);
}

message RateModRequest {
    int64 mod_id = 1;
    int64 author_id = 2;
    int32 rate = 3;
}

message RateModResponse {
    int64 rate_id = 1;
}

message GetRatesRequest {
    int64 mod_id = 1;
}

message GetRatesResponse {
    int64 rates_total = 1;
    int64 likes = 2;
    int64 dislikes = 3;
}
