syntax = "proto3";

package proto;

option java_multiple_files = true;
option java_package = "com.esclient.ratingservice.proto";

service RatingService {
  rpc AddRate(RateModRequest) returns (RateModResponse);
}

message RateModRequest {
  int64 mod_id = 1;
  int64 author_id = 2;
  int32 rating = 3;
}

message RateModResponse {
  int64 rate_id = 1;
}
